--- a/index.html
+++ b/index.html
@@ -157,10 +157,23 @@
         left: -25%;
         width: 20%;
         height: 200%;
-        background: linear-gradient(to right, rgba(255, 255, 255, 0) 0%, rgba(255, 255, 255, 0.3) 50%, rgba(255, 255, 255, 0) 100%);
-        transform: rotate(20deg);
-        opacity: 0.7;
+        background: linear-gradient(to right, rgba(255, 255, 255, 0) 0%, rgba(255, 255, 255, 0.28) 50%, rgba(255, 255, 255, 0) 100%);
+        transform: rotate(18deg);
+        opacity: 0.65;
         pointer-events: none;
+        will-change: opacity, transform;
+        transition: opacity 0.6s ease, transform 0.6s ease;
+      }
+      .dark .glass-reflection::after {
+        background: linear-gradient(to right, rgba(148, 163, 184, 0) 0%, rgba(148, 163, 184, 0.22) 45%, rgba(78, 205, 196, 0.18) 55%, rgba(148, 163, 184, 0) 100%);
+        opacity: 0.35;
+        transform: translateX(-5%) rotate(14deg);
+        filter: blur(4px);
+      }
+      @media (prefers-reduced-motion: reduce) {
+        .glass-reflection::after {
+          transition: none;
+        }
       }
       .glass-panel {
         position: relative;
