Add Open Graph and Twitter meta tags
Added Open Graph and Twitter meta tags for better social media integration.

--- a/index.html
+++ b/index.html
@@ -229,6 +229,18 @@
         }
       }
     </style>
+    <!-- Open Graph Preview (WhatsApp, Telegram, Facebook) -->
+<meta property="og:title" content="Edusimulate – Smart Learning Reimagined" />
+<meta property="og:description" content="A new era of interactive and smart learning." />
+<meta property="og:image" content="https://cdn.leonardo.ai/users/079b2afa-cab4-4bb7-8310-ec14683b0bde/generations/1f0c327e-90cd-6ac0-ba46-c8efdc05dd3c/seedream-4.0_A_vividly_vibrant_Edusimulate_banner_every_element_exudes_beauty_amidst_themes_o-0.jpg" />
+<meta property="og:url" content="https://edusimulate.vercel.app/" />
+<meta property="og:type" content="website" />
+
+<!-- Twitter (also helps Telegram) -->
+<meta name="twitter:card" content="summary_large_image" />
+<meta name="twitter:title" content="Edusimulate – Smart Learning Reimagined">
+<meta name="twitter:description" content="A new era of interactive and smart learning.">
+<meta name="twitter:image" content="https://cdn.leonardo.ai/users/079b2afa-cab4-4bb7-8310-ec14683b0bde/generations/1f0c327e-90cd-6ac0-ba46-c8efdc05dd3c/seedream-4.0_A_vividly_vibrant_Edusimulate_banner_every_element_exudes_beauty_amidst_themes_o-0.jpg">
   <script type="importmap">
 {
   "imports": {
