Update Open Graph and Twitter image metadata

--- a/index.html
+++ b/index.html
@@ -245,7 +245,7 @@
     <!-- Open Graph Preview (WhatsApp, Telegram, Facebook) -->
 <meta property="og:title" content="Edusimulate – Smart Learning Reimagined" />
 <meta property="og:description" content="A new era of interactive and smart learning." />
-<meta property="og:image" content="https://i.ibb.co/Y4K6FQ1R/seedream-4-0-A-vividly-vibrant-Edusimulate-banner-every-element-exudes-beauty-amidst-themes-o-0.jpg" />
+<meta property="og:image" content="https://i.ibb.co/8LhD5kwL/1000105417.jpg" />
 <meta property="og:url" content="https://edusimulate.vercel.app/" />
 <meta property="og:type" content="website" />
 
@@ -253,7 +253,7 @@
 <meta name="twitter:card" content="summary_large_image" />
 <meta name="twitter:title" content="Edusimulate – Smart Learning Reimagined">
 <meta name="twitter:description" content="A new era of interactive and smart learning.">
-<meta name="twitter:image" content="https://i.ibb.co/Y4K6FQ1R/seedream-4-0-A-vividly-vibrant-Edusimulate-banner-every-element-exudes-beauty-amidst-themes-o-0.jpg">
+<meta name="twitter:image" content="https://i.ibb.co/8LhD5kwL/1000105417.jpg">
 </head>
   <body class="font-sans">
     <div id="root"></div>
